# VoiceTagEditor

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  THIRD-PARTY-NOTICES.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: tauri-build.yml  tauri-release.yml
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  convert.rs  fs_scan.rs  lib.rs  main.rs  metadata.rs  models.rs  path_utils.rs  processing.rs  system_check.rs  utils.rs
src-tauri/src/convert/: flac.rs  m4a.rs  mod.rs  mp3.rs  opus.rs
src-tauri/src/metadata/: flac.rs  m4a.rs  mod.rs
