[package]
name = "voicetageditor"
version = "0.8.0"
description = "Desktop app to edit and convert audio tags (MP3/FLAC/WAV/M4A) with FFmpeg and Tauri."
authors = ["Noguchi Yuuki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voicetageditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
base64 = "0.22"
which = "6.0"
futures = "0.3"
walkdir = "2"
